--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "mern-infrastructure",
+  "name": "mern-upload-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.25.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "serve-favicon": "^2.5.0",
     "web-vitals": "^1.1.2"
